force-app/main/default/objects/Contact/fields/MP_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>MP_Doc_Number__c</fullName>
    <label>MP Doc Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>