force-app/main/default/objects/Contact/fields/MP_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>MP_Doc_Type__c</fullName>
    <label>MP Doc Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>