force-app/main/default/objects/Contact/fields/MP_Payer_ID__c.field-meta.xml
<CustomField>
    <fullName>MP_Payer_ID__c</fullName>
    <label>MP Payer ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>